# game-review

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.sh
apps/api/: .gitignore  README.md  main.py  pyproject.toml  start.sh
apps/api/api/: __init__.py  ai_stub.py  article_fetch.py  job_store.py  main.py  pipeline.py  rich_context.py  schemas.py
apps/web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  start.sh  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/jobs/: page.tsx
apps/web/app/jobs/[id]/: page.tsx
apps/web/lib/: api.ts
docs/: roadmap.md  夜间改动总结_NIGHTLY_SUMMARY_2026_04_21.md  明日决策清单_TODO_FOR_HUMAN.md  赛道改造指南_TRACK_ADAPTATION_GUIDE.md
game_review/: __init__.py  cli.py
scripts/: dev.sh
skills/game-review/: SKILL.md
skills/game-review/references/: review-board.md
skills/game-review/scripts/review/: add_visual_sheet.py  generate_review.py
tests/: test_api_jobs.py  test_article_fetch.py  test_cli_smoke.py  test_rich_context.py
