[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-review"
version = "0.1.0"
description = "5 评委 × 7 维度评审 CLI — 对已上线外部游戏或内部立项 PPT 做立项反推式二次评审"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "k412407009" },
]
keywords = ["game-design", "review", "ppt", "ai-agent", "skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
game-review = "game_review.cli:app"

[project.urls]
Homepage = "https://github.com/k412407009/game-review"
Repository = "https://github.com/k412407009/game-review"
Issues = "https://github.com/k412407009/game-review/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["game_review*"]
exclude = ["tests*", ".venv*"]

[tool.setuptools.package-data]
game_review = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
